# church_reg

./: .gitignore  README.md
stitch_mke/activity_monitor/: code.html
stitch_mke/admin_dashboard_orange_refresh/: code.html
stitch_mke/admin_user_permissions_management/: code.html
stitch_mke/evangelist_dashboard_orange_refresh/: code.html
stitch_mke/evangelist_directory/: code.html
stitch_mke/landing_page/: code.html
stitch_mke/login_screen_orange_refresh/: code.html
stitch_mke/member_admin_dashboard/: code.html
stitch_mke/mission_reports/: code.html
stitch_mke/new_member_registration/: code.html
stitch_mke/new_member_welcome_registration/: code.html
stitch_mke/outreach_form_orange_refresh/: code.html
stitch_mke/pastor_dashboard_orange_refresh/: code.html
stitch_mke/sacred_precision/: DESIGN.md
stitch_mke/service_check_in_search/: code.html
v1/: .env.prod.example  .gitignore  DEPLOYMENT.md  README.md  docker-compose.prod.yml
v1/server/: .dockerignore  DEVELOPMENT.md  Dockerfile  Dockerfile.prod  README.md  compose.yaml  main.py  pyproject.toml
v1/server/src/: config.py
v1/server/src/db/: setup.py
v1/server/src/db/models/: admin.py  attendance.py  saints.py
v1/server/src/db/repositories/: admin_repo.py  attendance_repo.py  saints_repo.py
v1/server/src/db/repositories/dependencies/: admin.py  saints.py
v1/server/src/db/routes/: admin.py  auth.py  saints.py
v1/server/src/schemas/: admin.py  attendance.py  auth.py  saints.py
v1/server/src/services/: admin_service.py  auth_service.py  checkin_service.py  saints_service.py
(+32 files in other folders)
